IMPORT-001 enable progress for data processing