@@ -4,6 +4,7 @@ import com.bioinformatics.dashboard.job.dto.Constants;
 import com.bioinformatics.dashboard.job.dto.ImportStatus;
 import com.bioinformatics.dashboard.job.repository.ImportJobRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.batch.core.BatchStatus;
 import org.springframework.batch.core.job.JobExecution;
 import org.springframework.batch.core.listener.JobExecutionListener;
@@ -16,6 +17,7 @@ import java.util.UUID;
 
 @Component
 @RequiredArgsConstructor
+@Slf4j
 public class ImportJobDatabaseListener implements JobExecutionListener {
 
     private final ImportJobRepository importJobRep;
@@ -47,7 +49,7 @@ public class ImportJobDatabaseListener implements JobExecutionListener {
         } else {
             jobRecord.setStatus(ImportStatus.FAILED);
             if (!jobExecution.getAllFailureExceptions().isEmpty()) {
-                jobRecord.setErrorMessage(jobExecution.getAllFailureExceptions().get(0).getMessage());
+                jobRecord.setErrorMessage(jobExecution.getAllFailureExceptions().getFirst().getMessage());
             }
         }
 
@@ -57,5 +59,6 @@ public class ImportJobDatabaseListener implements JobExecutionListener {
         jobRecord.setCompletedAt(jobExecution.getEndTime().atZone(ZoneId.systemDefault()).toInstant());
 
         importJobRep.save(jobRecord);
+        log.info("uniprot Data for Job <{}> successfully imported", jobId);
     }
 }
